DDI-Lifecycle/3.2/model/_sources/item-types/index.rst.txt
All Item Types
==============
DDI32 has 107 item types.

.. toctree::
   :maxdepth: 1

   Archive/index
   BaseLogicalProduct/index
   BaseRecordLayout/index
   Category/index
   CategoryGroup/index
   CategoryScheme/index
   CodeList/index
   CodeListGroup/index
   CodeListScheme/index
   Comparison/index
   ComputationItem/index
   Concept/index
   ConceptGroup/index
   ConceptScheme/index
   ConceptualComponent/index
   ConceptualVariable/index
   ConceptualVariableGroup/index
   ConceptualVariableScheme/index
   ControlConstruct/index
   ControlConstructGroup/index
   ControlConstructScheme/index
   DataCollection/index
   DataRelationship/index
   DataSet/index
   DDIInstance/index
   DDIProfile/index
   GeneralInstruction/index
   GenerationInstruction/index
   GenericMap/index
   GeographicLocation/index
   GeographicLocationGroup/index
   GeographicLocationScheme/index
   GeographicStructure/index
   GeographicStructureGroup/index
   GeographicStructureScheme/index
   Group/index
   IfThenElse/index
   Individual/index
   Instruction/index
   InstructionGroup/index
   Instrument/index
   InstrumentGroup/index
   InstrumentScheme/index
   InterviewerInstructionScheme/index
   LocalHoldingPackage/index
   LogicalProduct/index
   Loop/index
   Maintainable/index
   ManagedDateTimeRepresentation/index
   ManagedMissingValuesRepresentation/index
   ManagedNumericRepresentation/index
   ManagedRepresentationGroup/index
   ManagedRepresentationScheme/index
   ManagedScaleRepresentation/index
   ManagedTextRepresentation/index
   Methodology/index
   NCube/index
   NCubeGroup/index
   NCubeScheme/index
   Organization/index
   OrganizationGroup/index
   OrganizationScheme/index
   PhysicalDataProduct/index
   PhysicalInstance/index
   PhysicalStructure/index
   PhysicalStructureGroup/index
   PhysicalStructureScheme/index
   ProcessingEvent/index
   ProcessingEventGroup/index
   ProcessingEventScheme/index
   ProcessingInstructionGroup/index
   ProcessingInstructionScheme/index
   QualityStandard/index
   QualityStatement/index
   QualityStatementGroup/index
   QualityStatementScheme/index
   QuestionBlock/index
   QuestionConstruct/index
   QuestionGrid/index
   QuestionGroup/index
   QuestionItem/index
   QuestionScheme/index
   RecordLayout/index
   RecordLayoutGroup/index
   RecordLayoutScheme/index
   Relation/index
   RepeatUntil/index
   RepeatWhile/index
   RepresentationMap/index
   RepresentedVariable/index
   RepresentedVariableGroup/index
   RepresentedVariableScheme/index
   ResourcePackage/index
   Sequence/index
   StatementItem/index
   StudyUnit/index
   SubGroup/index
   SubUniverseClass/index
   Universe/index
   UniverseGroup/index
   UniverseScheme/index
   Variable/index
   VariableGroup/index
   VariableScheme/index
   VariableStatistics/index
   Versionable/index
   Weighting/index
