DDI-Lifecycle/3.3/model/_sources/item-types/index.rst.txt
All Item Types
==============
DDI has 156 item types.

.. toctree::
   :maxdepth: 1

   Agent/index
   ApprovalReview/index
   Archive/index
   BaseLogicalProduct/index
   BaseRecordLayout/index
   Category/index
   CategoryGroup/index
   CategoryScheme/index
   ClassificationCorrespondenceTable/index
   ClassificationFamily/index
   ClassificationIndex/index
   ClassificationItem/index
   ClassificationLevel/index
   ClassificationSeries/index
   CodeList/index
   CodeListGroup/index
   CodeListScheme/index
   CognitiveExpertReviewActivity/index
   CognitiveInterviewActivity/index
   Comparison/index
   ComputationItem/index
   Concept/index
   ConceptGroup/index
   ConceptScheme/index
   ConceptualComponent/index
   ConceptualVariable/index
   ConceptualVariableGroup/index
   ConceptualVariableScheme/index
   ContentReviewActivity/index
   ControlConstruct/index
   ControlConstructGroup/index
   ControlConstructScheme/index
   DataCaptureDevelopment/index
   DataCollection/index
   DataRelationship/index
   DataSet/index
   DDIInstance/index
   DDIProfile/index
   Describable/index
   DevelopmentActivity/index
   DevelopmentActivityGroup/index
   DevelopmentActivityScheme/index
   DevelopmentImplementation/index
   DevelopmentPlan/index
   DevelopmentResults/index
   DevelopmentStep/index
   FocusGroupActivity/index
   GeneralInstruction/index
   GenerationInstruction/index
   GenericMap/index
   GeographicLocation/index
   GeographicLocationGroup/index
   GeographicLocationScheme/index
   GeographicStructure/index
   GeographicStructureGroup/index
   GeographicStructureScheme/index
   Group/index
   IfThenElse/index
   Individual/index
   InformationClassification/index
   Instruction/index
   InstructionGroup/index
   Instrument/index
   InstrumentGroup/index
   InstrumentScheme/index
   InterviewerInstructionScheme/index
   LocalHoldingPackage/index
   LogicalProduct/index
   Loop/index
   Maintainable/index
   ManagedDateTimeRepresentation/index
   ManagedMissingValuesRepresentation/index
   ManagedNumericRepresentation/index
   ManagedRepresentation/index
   ManagedRepresentationGroup/index
   ManagedRepresentationScheme/index
   ManagedScaleRepresentation/index
   ManagedTextRepresentation/index
   MeasurementConstruct/index
   MeasurementGroup/index
   MeasurementItem/index
   MeasurementScheme/index
   Methodology/index
   NCube/index
   NCubeGroup/index
   NCubeScheme/index
   Organization/index
   OrganizationGroup/index
   OrganizationScheme/index
   OtherMaterial/index
   OtherMaterialGroup/index
   OtherMaterialScheme/index
   PhysicalDataProduct/index
   PhysicalInstance/index
   PhysicalInstanceGroup/index
   PhysicalStructure/index
   PhysicalStructureGroup/index
   PhysicalStructureScheme/index
   PretestActivity/index
   ProcessingEvent/index
   ProcessingEventGroup/index
   ProcessingEventScheme/index
   ProcessingInstruction/index
   ProcessingInstructionGroup/index
   ProcessingInstructionScheme/index
   QualityScheme/index
   QualityStandard/index
   QualityStandardGroup/index
   QualityStatement/index
   QualityStatementGroup/index
   Question/index
   QuestionBlock/index
   QuestionConstruct/index
   QuestionGrid/index
   QuestionGroup/index
   QuestionItem/index
   QuestionScheme/index
   RecordLayout/index
   RecordLayoutGroup/index
   RecordLayoutScheme/index
   Relation/index
   RepeatUntil/index
   RepeatWhile/index
   RepresentationMap/index
   RepresentedVariable/index
   RepresentedVariableGroup/index
   RepresentedVariableScheme/index
   ResourcePackage/index
   Sample/index
   SampleFrame/index
   SampleStep/index
   SamplingInformationGroup/index
   SamplingInformationScheme/index
   SamplingPlan/index
   SamplingStage/index
   Sequence/index
   Split/index
   SplitJoin/index
   StatementItem/index
   StatisticalClassification/index
   StudyUnit/index
   SubUniverseClass/index
   TranslationActivity/index
   UnitType/index
   UnitTypeGroup/index
   UnitTypeScheme/index
   Universe/index
   UniverseGroup/index
   UniverseScheme/index
   Variable/index
   VariableGroup/index
   VariableScheme/index
   VariableStatistics/index
   Versionable/index
   Weighting/index
   WeightingMethodology/index
